weather icons added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <div class="citydata">
                 <div class="card-body">
                     <h2 id = "heading"></h2>
+                    <img id = "icon" src = "">
                     <p id = "tempFDisplay"></p>
                     <p id = "humidityDisplay"></p>
                     <p id = "windDisplay"></p>
@@ -46,36 +47,36 @@
             </div>
             
             <div class = "card-body forecast">
-                <p id = "date1"></p>
-                <p id = "iconDisplay1"></p>
+                <h4 id = "date1"></h4>
+                <img id = "iconDisplay1" src = "">
                 <p id = "tempFDisplay1"></p>
                 <p id = "humidityDisplay1"></p>
             </div>      
 
             <div class = "card-body forecast">
-                <p id = "date2"></p>
-                <p id = "iconDisplay2"></p>
+                <h4 id = "date2"></h4>
+                <img id = "iconDisplay2" src = "">
                 <p id = "tempFDisplay2"></p>
                 <p id = "humidityDisplay2"></p>
             </div>
 
             <div class = "card-body forecast">
-                <p id = "date3"></p>
-                <p id = "iconDisplay3"></p>
+                <h4 id = "date3"></h4>
+                <img id = "iconDisplay3" src = "">
                 <p id = "tempFDisplay3"></p>
                 <p id = "humidityDisplay3"></p>
             </div>
 
             <div class = "card-body forecast">
-                <p id = "date4"></p>
-                <p id = "iconDisplay4"></p>
+                <h4 id = "date4"></h4>
+                <img id = "iconDisplay4" src = "">
                 <p id = "tempFDisplay4"></p>
                 <p id = "humidityDisplay4"></p>
             </div>
             
             <div class = "card-body forecast">
-                <p id = "date5"></p>
-                <p id = "iconDisplay5"></p>
+                <h4 id = "date5"></h4>
+                <img id = "iconDisplay5" src = "">
                 <p id = "tempFDisplay5"></p>
                 <p id = "humidityDisplay5"></p>
             </div>
